# KasperskyOS_MCD

./: .gitignore  CMakeLists.txt
Client/: Client.cpp  Client.hpp  main.cpp
Server/: Server.cpp  Server.hpp  easylogging++.cc  easylogging++.h  main.cpp
